add tmplToLines,change mkCst

--- a/src/iParser_Impl.cls
+++ b/src/iParser_Impl.cls
@@ -10,6 +10,22 @@ Attribute VB_Exposed = False
 Private m_name As String 'i_,g,l
 Private m_Parsers As Collection 'is,igo_,go,s_
 
+Private Property Get name() As String
+    name = m_name
+End Property
+
+Private Property Let name(ByVal name_ As String)
+    m_name = name_
+End Property
+
+Private Property Get Parsers() As Collection
+    Set Parsers = m_Parsers
+End Property
+
+Public Property Set Parsers(Parsers_ As Collection)
+    Set m_Parsers = Parsers_
+End Property
+
 Function and_(parser As iParser) As iParser
     Set and_ = Seq(Me, parser)
 End Function
@@ -30,13 +46,16 @@ Function r_() As iParser
     Set r_ = Rep0or1(Me)
 End Function
 
-Function matchState(state As ParseState)
+Function internalMatch(state As ParseState)
 End Function
 
 Function match(somthing)
     If TypeName(something) = "String" Then
-        Set state = Paresestate(something, 0)
+        Set state = PareseState(something, 0)
+    Else
+        Set state = internalMatch(something)
     End If
+    Set match = state
 End Function
 
 Function init(prm)
