--- a/src/Node.cls
+++ b/src/Node.cls
@@ -2,11 +2,8 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "ParseState"
+Attribute VB_Name = "Node"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-Private m_inputs As String
-Private m_pos As Long
-Private m_nodes
