--- a/src/Rep0or1.cls
+++ b/src/Rep0or1.cls
@@ -2,13 +2,30 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "iParser_Impl"
+Attribute VB_Name = "Rep0or1"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
+Implements iParser
 Private m_name As String 'i_,g,l
 Private m_Parsers As Collection 'is,igo_,go,s_
+
+Private Property Get name() As String
+    name = m_name
+End Property
+
+Private Property Let name(ByVal name_ As String)
+    m_name = name_
+End Property
+
+Private Property Get Parsers() As Collection
+    Set Parsers = m_Parsers
+End Property
+
+Public Property Set Parsers(Parsers_ As Collection)
+    Set m_Parsers = Parsers_
+End Property
 
 Function and_(parser As iParser) As iParser
     Set and_ = Seq(Me, parser)
